--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
 <body>
     <p>Er dere klare for å jobbe</p>
+    <p>Absolutt ikke...</p>
 
     <p> så lost </p>
 </body>
