--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
+    <H1>Velkommen til NAAM!</H1>
+    <h2>Dere må prøve å legge til ting</h2>
 <body>
     <p>Er dere klare for å jobbe</p>
     <p>Absolutt ikke...</p>
