--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
+<body>
     <H1>Velkommen til NAAM!</H1>
     <h2>Dere må prøve å legge til ting</h2>
-<body>
     <p>Er dere klare for å jobbe</p>
-    <p>Absolutt ikke...</p>
+    <h3>Om oss: </h3>
+    <p>Andreas: Jeg er 21år og ny i oslo. </p>
 
     <p> så lost </p>
 </body>
