--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
+<head>
+    <title>Din første valgfri oppgave</title>
+</head>
 <body>
     <H1>Velkommen til NAAM!</H1>
     <h2>Dere må prøve å legge til ting</h2>
