--- a/valgfri2.html
+++ b/valgfri2.html
@@ -10,12 +10,17 @@ h1 {
   color: maroon;
   margin-left: 40px;
 }
+h2 {
+  color: brown;
+  margin-left: 40px;
+}
 </style>
 </head>
 <body>
 
 <h1>Velkommen til valgfrioppgave</h1>
 <h2>Dette er steg 1.</h2>
+<P>Vi skal lære om å bruke css for å style html</P>
 
 </body>
 </html>
